--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -118,21 +118,39 @@
                       </div>
                   
                       
-                       <div style="margin-left: 270px;" class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback">
+<!--                        <div style="margin-left: 270px;" class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback"> -->
+<!--                         <input type="text" class="form-control has-feedback-left" id="inputSuccess4" name="passtwo" placeholder="Confirmer Mot de passe"> -->
+<!--                         <span class="fa fa-lock form-control-feedback left" aria-hidden="true"></span> -->
+<!--                       </div> -->
+
+<div class="col-md-3 col-sm-3 col-xs-12 form-group"></div>
+<div  class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback">
                         <input type="text" class="form-control has-feedback-left" id="inputSuccess4" name="passtwo" placeholder="Confirmer Mot de passe">
                         <span class="fa fa-lock form-control-feedback left" aria-hidden="true"></span>
                       </div>
+                      <div class="col-md-3 col-sm-3 col-xs-12 form-group"></div>
 
-<br>
+<!-- <br> -->
 
-                      <div class="ln_solid"></div>
-                      <div  style="margin-left: 10px;" class="form-group">
-                        <div   class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
+<div>
+<div  class="col-md-9 col-sm-9 col-xs-12 form-group"></div>
+<div class="col-md-3 col-sm-3 col-xs-12 form-group">
+ 
+                         <button class="btn btn-primary" type="reset">Réinitialiser</button>
                         
-						   <button class="btn btn-primary" type="reset">Réinitialiser</button>
                           <button type="submit" class="btn btn-success">Modifier</button>
-                        </div>
+                          
                       </div>
+                      
+</div>
+<!--                       <div class="ln_solid"></div> -->
+<!--                       <div  style="margin-left: 10px;" class="form-group"> -->
+<!--                         <div   class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3"> -->
+                        
+<!-- 						   <button class="btn btn-primary" type="reset">Réinitialiser</button> -->
+<!--                           <button type="submit" class="btn btn-success">Modifier</button> -->
+<!--                         </div> -->
+<!--                       </div> -->
 
                     </form>
                   </div>
