--- a/src/main/resources/templates/signupp.html
+++ b/src/main/resources/templates/signupp.html
@@ -64,6 +64,9 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
               <div>
                 <input type="password" class="form-control" placeholder="Mot de passe" th:value=${contact.password} name="password" required/>
               </div>
+              <div>
+                <input type="password" class="form-control" placeholder="Retappez Mot de passe" value="" name="repass" required/>
+              </div>
               <div >
                         
                           <select  name="ville" class="form-control">
