--- a/src/main/resources/templates/PageEdite.html
+++ b/src/main/resources/templates/PageEdite.html
@@ -9,7 +9,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="images/favicon.ico" type="image/ico" />
 
-    <title>Edite action </title>
+    <title>Action edite </title>
 
        <!-- Bootstrap -->
     <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -32,6 +32,11 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
     <!-- Custom Theme Style -->
     <link href="build/css/custom.min.css" rel="stylesheet">
+        
+<!--   <script type="text/javascript" src="jquery.js"></script> -->
+ 
+
+<!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> -->
 
 
     
@@ -40,186 +45,13 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
   <body class="nav-md">
     <div class="container body">
       <div class="main_container">
-        <div class="col-md-3 left_col">
-          <div class="left_col scroll-view">
-            <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-gg "></i> <span> Mon association </span></a>
-            </div>
-
-            <div class="clearfix"></div>
-
-            <!-- menu profile quick info -->
-            <div class="profile clearfix">
-              <div class="profile_pic">
-                <img src="images/img.jpg" alt="..." class="img-circle profile_img">
-              </div>
-              <div class="profile_info">
-                <span>Administrateur,</span>
-                <h2>John Doe</h2>
-              </div>
-            </div>
-            <!-- /menu profile quick info -->
-
-            <br />
-
-            <!-- sidebar menu -->
-            <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-              <div class="menu_section">
-            <!--   <h3>General</h3>  -->  
-                <ul class="nav side-menu">
-               
-               
-                  <li>
-                          <a href="#"><i class="fa fa-bar-chart-o"></i> Tableau de bord<span ></span></a>
-                  </li>
-                  
-
-                       <li><a><i class="fa fa-sitemap"></i> Communauté <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="form.html">General Form</a></li>
-                      <li><a href="form_advanced.html">Advanced Components</a></li>
-                      <li><a href="form_validation.html">Form Validation</a></li>
-                      <li><a href="form_wizards.html">Form Wizard</a></li>
-                      <li><a href="form_upload.html">Form Upload</a></li>
-                      <li><a href="form_buttons.html">Form Buttons</a></li>
-                    </ul>
-                  </li>
-
-                  
-                  <li><a><i class="fa fa-table"></i> Evénements <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="tables.html">Tables</a></li>
-                      <li><a href="tables_dynamic.html">Table Dynamic</a></li>
-                    </ul>
-                  </li>
-                  
-            <!--   <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="chartjs.html">Chart JS</a></li>
-                      <li><a href="chartjs2.html">Chart JS2</a></li>
-                      <li><a href="morisjs.html">Moris JS</a></li>
-                      <li><a href="echarts.html">ECharts</a></li>
-                      <li><a href="other_charts.html">Other Charts</a></li>
-                    </ul>
-                  </li> -->
-                  
-                     <li><a><i class="fa fa-home"></i> Mon association <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
-                      <li><a href="fixed_footer.html">Fixed Footer</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-              <div class="menu_section">
-              </div></div>
-              
-               <!--  <h3>Live On</h3> 
-                <ul class="nav side-menu">
-                  <li><a><i class="fa fa-bug"></i> Additional Pages <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="e_commerce.html">E-commerce</a></li>
-                      <li><a href="projects.html">Projects</a></li>
-                      <li><a href="project_detail.html">Project Detail</a></li>
-                      <li><a href="contacts.html">Contacts</a></li>
-                      <li><a href="profile.html">Profile</a></li>
-                    </ul>
-                  </li>
-                  <li><a><i class="fa fa-windows"></i> Extras <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="page_403.html">403 Error</a></li>
-                      <li><a href="page_404.html">404 Error</a></li>
-                      <li><a href="page_500.html">500 Error</a></li>
-                      <li><a href="plain_page.html">Plain Page</a></li>
-                      <li><a href="login.html">Login Page</a></li>
-                      <li><a href="pricing_tables.html">Pricing Tables</a></li>
-                    </ul>
-                  </li>
-                  <li><a><i class="fa fa-sitemap"></i> Multilevel Menu <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                        <li><a href="#level1_1">Level One</a>
-                        <li><a>Level One<span class="fa fa-chevron-down"></span></a>
-                          <ul class="nav child_menu">
-                            <li class="sub_menu"><a href="level2.html">Level Two</a>
-                            </li>
-                            <li><a href="#level2_1">Level Two</a>
-                            </li>
-                            <li><a href="#level2_2">Level Two</a>
-                            </li>
-                          </ul>
-                        </li>
-                        <li><a href="#level1_2">Level One</a>
-                        </li>
-                    </ul>
-                  </li>                  
-                  <li><a href="javascript:void(0)"><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a></li>
-                </ul> --> 
-             
-            <!-- /sidebar menu -->
-
-            <!-- /menu footer buttons -->
-            <div class="sidebar-footer hidden-small">
-              <a data-toggle="tooltip" data-placement="top" title="Paramètres">
-                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-              </a>
-             <!--  --> <a data-toggle="tooltip" data-placement="top" title="Plein Ecran">
-                <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
-              </a> 
-              
-              <a data-toggle="tooltip" data-placement="top" title="Administrateurs">
-                <span class="fa fa-users" aria-hidden="true"></span>
-              </a>
-              
-              <a data-toggle="tooltip" data-placement="top" title="Déconnexion" href="login.html">
-                <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
-              </a>
-            </div>
-            
-            <!-- /menu footer buttons -->
-          </div>
-        </div>
-
-        <!-- top navigation -->
-        <div class="top_nav">
-          <div class="nav_menu">
-            <nav>
-              <div class="nav toggle">
-                <a id="menu_toggle"><i class="fa fa-bars"></i></a>
-              </div>
-
-              <ul class="nav navbar-nav navbar-right">
-                <li class="">
-                  <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="images/img.jpg" alt="">John Doe
-                    <span class=" fa fa-angle-down"></span>
-                  </a>
-                  <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href="profile.html"> Mon Profil</a></li>
-                    <li>
-                      <a href="javascript:;">
-                        <!-- <span class="badge bg-red pull-right">50%</span> -->
-                        <span>Paramétres</span>
-                      </a>
-                    </li>
-                    
-                  <!--    <li><a href="javascript:;">Help</a></li> -->
-                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Déconnexion </a></li>
-                  </ul>
-                </li>
-                  </li>
-                  </ul>
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </div> 
-					
-            
+       <div th:replace = "form :: form1"> </div>
+                   
 <div class="right_col" role="main">
-          <div class="">
+<!--           <div class=""> -->
             <div class="page-title">
               <div class="title_left">
-                <h3><b>Update action</b></h3>
+                <h3><b>Modifier action</b></h3>
               </div>
 
               
@@ -359,13 +191,12 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
   <div  class="class-row">
  
- <button type="submit" name="UpdateId" class="btn btn-success  pull-right" th:value="${actionE.getIdAction()}"><b>Update</b></button>
+ <button type="submit" name="UpdateId" class="btn btn-success  pull-right" th:value="${actionE.getIdAction()}"><b>Modifier</b></button>
   </div>
 
 </form>
  </div>
 </div>
-
 
 <script>
 //     $(document).ready(function(){
@@ -380,11 +211,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 //       date_input.datepicker(options);
 //     })
 </script>
-
-              </div>
-            </div>
-            </div></div>
-       <script type="text/javascript">
+<script type="text/javascript">
   $(function() {
     $('#datetimepicker4').datetimepicker({
       pickTime: false
@@ -392,13 +219,49 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
   });
 </script>
 
+
+ 
+
+
+<script type="text/javascript">
+$(document).ready(function() {
+
+   
+   var readURL = function(input) {
+       if (input.files && input.files[0]) {
+           var reader = new FileReader();
+
+           reader.onload = function (e) {
+               $('.avatar').attr('src', e.target.result);
+           }
+   
+           reader.readAsDataURL(input.files[0]);
+       }
+   }
+   
+
+   $(".file-upload").on('change', function(){
+       readURL(this);
+   });
+});
+</script>
+
               </div>
             </div>
             </div></div>
+            </div>
            
         <!-- /page content -->
 
-            <!-- jQuery -->
+        
+
+   
+    
+    
+    
+    
+    
+     <!-- jQuery -->
     <script src="vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
     <script src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -457,47 +320,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     });
 </script>
 
-    <!-- jQuery -->
-    <script src="vendors/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap -->
-    <script src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- FastClick -->
-    <script src="vendors/fastclick/lib/fastclick.js"></script>
-    <!-- NProgress -->
-    <script src="vendors/nprogress/nprogress.js"></script>
-    <!-- Chart.js -->
-    <script src="vendors/Chart.js/dist/Chart.min.js"></script>
-    <!-- gauge.js -->
-    <script src="vendors/gauge.js/dist/gauge.min.js"></script>
-    <!-- bootstrap-progressbar -->
-    <script src="vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
-    <!-- iCheck -->
-    <script src="vendors/iCheck/icheck.min.js"></script>
-    <!-- Skycons -->
-    <script src="vendors/skycons/skycons.js"></script>
-    <!-- Flot -->
-    <script src="static/vendors/Flot/jquery.flot.js"></script>
-    <script src="static/vendors/Flot/jquery.flot.pie.js"></script>
-    <script src="static/vendors/Flot/jquery.flot.time.js"></script>
-    <script src="static/vendors/Flot/jquery.flot.stack.js"></script>
-    <script src="static/vendors/Flot/jquery.flot.resize.js"></script>
-    <!-- Flot plugins -->
-    <script src="static/vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
-    <script src="static/vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
-    <script src="static/vendors/flot.curvedlines/curvedLines.js"></script>
-    <!-- DateJS -->
-    <script src="static/vendors/DateJS/build/date.js"></script>
-    <!-- JQVMap -->
-    <script src="static/vendors/jqvmap/dist/jquery.vmap.js"></script>
-    <script src="static/vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
-    <script src="static/vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
-    <!-- bootstrap-daterangepicker -->
-    <script src="vendors/moment/min/moment.min.js"></script>
-    <script src="vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
-
-    <!-- Custom Theme Scripts -->
-    <script src="build/js/custom.min.js"></script>
-	
+   
 	
   </body>
 </html>
