--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -452,7 +452,7 @@ function includeHTML() {
 				<div class="x_content">
                   <div class="dashboard-widget-content">
                     <div  class="sidebar-widget ">
-                        <a href="#" >
+                        <a th:href="@{/first}" >
                         <div class="goal-wrapper fa fa-calendar-plus-o">
                         <h4>EVENEMENT</h4>
                         </div>
@@ -492,13 +492,13 @@ function includeHTML() {
                         </a>
                     </div>
                     
-                      <div style="margin-right: 215px;" class="sidebar-widget ">
-                      <a href="#">
-                        <div class="goal-wrapper fa fa-database">
-                         <h4>RESSOURCES</h4>
-                        </div>
-                         </a>
-                    </div>
+<!--                       <div style="margin-right: 215px;" class="sidebar-widget "> -->
+<!--                       <a href="#"> -->
+<!--                         <div class="goal-wrapper fa fa-database"> -->
+<!--                          <h4>RESSOURCES</h4> -->
+<!--                         </div> -->
+<!--                          </a> -->
+<!--                     </div> -->
                     
                     
                     
