--- a/src/main/resources/templates/passwordlogin.html
+++ b/src/main/resources/templates/passwordlogin.html
@@ -37,16 +37,16 @@
         <div class="animate form login_form">
           <section class="login_content">
             <form th:action="@{/connect}" method="post" th:object="${contact}">
-              <h1>Password Form</h1>
+              <h1>Mot de passe</h1>
               <div>
-                <input type="password" name="password" id="password"  class="form-control" th:field="*{password}" placeholder="password"  required/>
+                <input type="password" name="password" id="password"  class="form-control" th:field="*{password}" placeholder="Mot de passe"  required/>
                 <span th:errors = "*{password}" class="text-danger" ></span>
                 <span th:text = "${errorvalidation}" class="text-danger" ></span> 
               </div>
 
               
               <div>
-                 <button type="submit" class="btn btn-default submit" >Login</button>
+                 <button type="submit" class="btn btn-default submit" >Se connecter</button>
               </div>
 
             </form>
