--- a/src/main/resources/templates/typelogin.html
+++ b/src/main/resources/templates/typelogin.html
@@ -33,7 +33,7 @@
         <div class="animate form login_form">
           <section class="login_content">
             <form th:action="@{/passwordlogin}" method="post" >
-              <h1>Organisme Form</h1>
+              <h1>Organisme </h1>
               <div>
              <!--   <input type="text" name="username" id="username" class="form-control" placeholder="Email" />
                 <span class="text-danger" ></span> --> 
@@ -58,7 +58,7 @@
  				<br>
               <div>
                 <!-- <a class="btn btn-default submit" href="index">Log in</a> -->
-                 <button type="submit" class="btn btn-default submit " >Next</button>
+                 <button type="submit" class="btn btn-default submit " >Suivant</button>
           <!--     <a class="reset_pass" href="#">Lost your password?</a> -->
               </div>
 
