--- a/src/main/resources/templates/userprofile.html
+++ b/src/main/resources/templates/userprofile.html
@@ -131,7 +131,7 @@
                         </div>
                       </div>
                     </div> -->
-                    <button type="submit" class="btn btn-primary pull-right">Update Profile</button>
+                    <button type="submit" class="btn btn-primary pull-right">Modifier Profile</button>
                     <div class="clearfix"></div>
                 </form>
                 </div>
